--- a/index.html
+++ b/index.html
@@ -38,16 +38,14 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
+    <h1>Hao Lu</h1>
   </header>
   <main>
     <h2>About Me</h2>
     <p>
-      Hello! My name is [Your Name], and I am a [Your Occupation/Role] based in [Your Location]. I specialize in [Your Area of Expertise]. I completed my [Your Degree] in [Your Field of Study] at [Your University].
+      Hello! My name is Hao Lu. I specialize in human detection, depth image processing, and multimodal learning. I completed my Ph.D in EE at Rensselaer Polytechnic Institute.
     </p>
-    <p>
-      In my free time, I enjoy [Your Hobbies or Interests].
-    </p>
+
 
     <h2>My Research</h2>
     <p>
