--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <p>
       Hello! My name is Hao Lu. I specialize in human detection, depth image processing, and multimodal learning. I completed my Ph.D in EE at Rensselaer Polytechnic Institute.
     </p>
+    <!-- Add this line where you want the PDF link to appear -->
+    <p><a href="Hao_s_Resume.pdf" target="_blank">View My Resume (PDF) for details here</a></p>
 
 
     <h2>My Research</h2>
@@ -60,6 +62,7 @@
     <p>
       To save the installation cost and sensor engergy cost, we sparsely install it in the office room. Here's a video to show the Counting result in office room. The details of this work publiced in "Lu, H., Tuzikas, A., & Radke, R. J. (2021). A zone-level occupancy counting system for commercial office spaces using low-resolution time-of-flight sensors. Energy and Buildings, 252, 111390."
     </p>
+    <p><a href="A_Zone_L.pdf" target="_blank">View My Research Paper (PDF)</a></p>
     <video src="counting.mp4" controls>
       Counting demo.
     </video>
